# rutilities

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish-cargo.yml  publish-npm.yml  publish.yml  wasm-pack-test.yml
examples/: clean.rs
src/: lib.rs  utilities.rs
src/utilities/: clean.rs  format.rs  generate_valid_rut.rs  get_verification_digit.rs  is_rut_valid.rs
tests/: node.rs  web.rs
