[package]
authors = ["Rafael Lecaros <rlecaro2>"]
description = "Chilean RUT utilities."
edition = "2018"
homepage = "https://github.com/rlecaro2/rutilities"
include = ["src/", "LICENSE-*", "README.md"]
keywords = ["rut", "chile"]
license = "MIT OR Apache-2.0"
name = "rutilities"
readme = "README.md"
repository = "https://github.com/rlecaro2/rutilities"
version = "0.1.0"

[dependencies]
rand = "0.8.4"
regex = "1"
