[package]
authors = ["Rafael Lecaros <rlecaro2>"]
description = "Chilean RUT utilities."
edition = "2018"
homepage = "https://github.com/rlecaro2/rutilities"
include = ["src/", "LICENSE-*", "README.md"]
keywords = ["rut", "chile"]
license = "MIT OR Apache-2.0"
name = "rutilities"
readme = "README.md"
repository = "https://github.com/rlecaro2/rutilities"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
rand = "0.8.4"
regex = "1"
wasm-bindgen = "0.2"
